--- a/ds_algo109/pom.xml
+++ b/ds_algo109/pom.xml
@@ -16,40 +16,55 @@
           		</suiteXmlFiles>
         		</configuration>
 		</plugin>
+		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.0</version>
+<configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+			</plugin>
+			
 	</plugins>
+	
 </build>
   <dependencies>
-	  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
     <version>4.9.0</version>
 </dependency>
+
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 			<dependency>
 			    <groupId>org.testng</groupId>
 			    <artifactId>testng</artifactId>
 			    <version>7.7.1</version>
 			    <scope>test</scope>
-			</dependency><!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
-			<dependency>
-			    <groupId>io.cucumber</groupId>
-			    <artifactId>cucumber-java</artifactId>
-			    <version>7.11.2</version>
 			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
-			<dependency>
-			    <groupId>io.cucumber</groupId>
-			    <artifactId>cucumber-junit</artifactId>
-			    <version>7.11.2</version>
-			    <scope>test</scope>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
-			<dependency>
-			    <groupId>io.cucumber</groupId>
-			    <artifactId>cucumber-testng</artifactId>
-			    <version>7.11.2</version>
-			</dependency>
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<dependency>
+<groupId>io.cucumber</groupId>
+<artifactId>cucumber-java</artifactId>
+<version>7.2.3</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+<dependency>
+<groupId>io.cucumber</groupId>
+<artifactId>cucumber-junit</artifactId>
+<version>7.2.3</version>
+<scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>7.2.3</version>
+</dependency>
+
+
 			<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 			<dependency>
 			    <groupId>org.apache.poi</groupId>
@@ -92,7 +107,17 @@
 			    <artifactId>webdrivermanager</artifactId>
 			    <version>5.3.2</version>
 			</dependency>
-		
-			
-	  	</dependencies>
+<dependency>
+<groupId>org.junit.jupiter</groupId>
+<artifactId>junit-jupiter-api</artifactId>
+<version>5.7.0</version>
+<scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
+<dependency>
+<groupId>io.qameta.allure</groupId>
+<artifactId>allure-cucumber7-jvm</artifactId>
+<version>2.17.2</version>
+</dependency>
+</dependencies>
 </project>
