--- a/ds_algo109/pom.xml
+++ b/ds_algo109/pom.xml
@@ -11,6 +11,9 @@
 			    <artifactId>maven-surefire-plugin</artifactId>
 			    <version>3.0.0</version>
 	      		<configuration>
+					<includes>
+<include>**/TestRunner.java</include>
+</includes>  
           		<suiteXmlFiles>
 
           		</suiteXmlFiles>
@@ -107,17 +110,23 @@
 			    <artifactId>webdrivermanager</artifactId>
 			    <version>5.3.2</version>
 			</dependency>
-<dependency>
-<groupId>org.junit.jupiter</groupId>
-<artifactId>junit-jupiter-api</artifactId>
-<version>5.7.0</version>
-<scope>test</scope>
-</dependency>
+
 <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
 <dependency>
 <groupId>io.qameta.allure</groupId>
 <artifactId>allure-cucumber7-jvm</artifactId>
 <version>2.17.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+
+		<dependency>
+
+			<groupId>io.qameta.allure</groupId>
+
+			<artifactId>allure-testng</artifactId>
+
+			<version>2.17.3</version>
+
+		</dependency>
 </dependencies>
 </project>
