--- a/ds_algo109/pom.xml
+++ b/ds_algo109/pom.xml
@@ -128,5 +128,11 @@
 			<version>2.17.3</version>
 
 		</dependency>
+	<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.24</version>
+    <scope>provided</scope>
+</dependency>	
 </dependencies>
 </project>
